reduce people bio spacing; added placeholder text to correct field

--- a/assets/scss/_plugins.scss
+++ b/assets/scss/_plugins.scss
@@ -222,9 +222,6 @@ div.orbit-wrapper div.timer, .orbit-timer {
   list-style: none;
 }
 
-.single-people p {
-  line-height: 2em;
-}
 
 #bioTab h6 {
   margin-bottom: 20px;
